--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-    <h1>hello world</h1>
+
+    <main>
+        <section class="container row mx-auto mt-5">
+            <!-- image area -->
+            <div class="col-lg-6">
+                <img class="img-fluid" src="images/mac.png" alt="">
+            </div>
+            <div class="col-lg-6">
+                <h1>Customize your Blue 24‑inch iMac with Apple M1 chip.</h1>
+            </div>
+        </section>
+    </main>
 
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
