adding description area

--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
             <div class="col-lg-6">
                 <img class="img-fluid" src="images/mac.png" alt="">
             </div>
+            <!-- description area -->
             <div class="col-lg-6">
                 <h1>Customize your Blue 24‑inch iMac with Apple M1 chip.</h1>
+                <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and
+                    16-core Neural Engine
+                </p>
+                <!-- customization area -->
+                <div class="mt-5">
+
+                </div>
             </div>
         </section>
     </main>
