--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
                 </p>
                 <!-- customization area -->
                 <div class="mt-5">
-
+                    <h5>Memory</h5>
+                    <div class="d-flex">
+                        <button class="btn btn-outline-dark">8GB unified memory</button>
+                        <button class="ms-2 btn btn-outline-dark">16GB unified memory</button>
+                    </div>
                 </div>
             </div>
         </section>
