adding storage area

--- a/index.html
+++ b/index.html
@@ -26,14 +26,27 @@
                     16-core Neural Engine
                 </p>
                 <!-- customization area -->
-                <div class="mt-5">
+                <!-- memory area start -->
+                <div class="mt-4">
                     <h5>Memory</h5>
                     <div class="d-flex">
                         <button class="btn btn-outline-dark">8GB unified memory</button>
                         <button class="ms-2 btn btn-outline-dark">16GB unified memory</button>
                     </div>
                 </div>
+                <!-- memory area end -->
+
+                <!-- storage area start -->
+                <div class="mt-3">
+                    <h5>Storage</h5>
+                    <div class="d-flex">
+                        <button class="btn btn-outline-dark">256GB SSD storage</button>
+                        <button class="ms-2 btn btn-outline-dark">512GB SSD storage</button>
+                        <button class="ms-2 btn btn-outline-dark">1TB SSD storage</button>
+                    </div>
+                </div>
             </div>
+            <!-- storage area end -->
         </section>
     </main>
 
