adding delivery option

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- customization area -->
                 <!-- memory area start -->
                 <div class="mt-4">
-                    <h5>Memory</h5>
+                    <h6>Memory</h6>
                     <div class="d-flex">
                         <button class="btn btn-outline-dark">8GB unified memory</button>
                         <button class="ms-2 btn btn-outline-dark">16GB unified memory</button>
@@ -38,15 +38,29 @@
 
                 <!-- storage area start -->
                 <div class="mt-3">
-                    <h5>Storage</h5>
+                    <h6>Storage</h6>
                     <div class="d-flex">
                         <button class="btn btn-outline-dark">256GB SSD storage</button>
                         <button class="ms-2 btn btn-outline-dark">512GB SSD storage</button>
                         <button class="ms-2 btn btn-outline-dark">1TB SSD storage</button>
                     </div>
                 </div>
+                <!-- storage area end -->
+
+                <!-- delivery option start -->
+                <div class="mt-3">
+                    <h6>Choose your delivery option</h6>
+                    <div class="d-flex">
+                        <button class="btn btn-outline-dark">Friday, Aug 25 FREE Prime Delivery</button>
+                        <button class="ms-2 btn btn-outline-dark">Friday, Aug 21 Delivery change $20</button>
+                    </div>
+                </div>
+                <!-- delivery option end -->
             </div>
             <!-- storage area end -->
+
+
+
         </section>
     </main>
 
