adding pricing area

--- a/index.html
+++ b/index.html
@@ -56,8 +56,41 @@
                     </div>
                 </div>
                 <!-- delivery option end -->
+
+                <!-- pricing area -->
+                <div class="w-50 mt-5 fw-bold">
+                    <div class="d-flex justify-content-between">
+                        <p>best Price</p>
+                        <p>$<span>1299</span></p>
+                    </div>
+                    <hr class="m-0">
+
+                    <div class="d-flex justify-content-between">
+                        <p>Extra Memory Cost</p>
+                        <p>$<span>0</span></p>
+                    </div>
+                    <hr class="m-0">
+
+                    <div class="d-flex justify-content-between">
+                        <p>Extra Storage Cost</p>
+                        <p>$<span>0</span></p>
+                    </div>
+                    <hr class="m-0">
+
+                    <div class="d-flex justify-content-between">
+                        <p>Delivery Charge</p>
+                        <p>$<span>0</span></p>
+                    </div>
+                    <hr class="pt-1 m-0">
+
+                    <div class="d-flex justify-content-between">
+                        <p>Total Price</p>
+                        <p>$<span>1299</span></p>
+                    </div>
+                </div>
+
+
             </div>
-            <!-- storage area end -->
 
 
 
