--- a/index.html
+++ b/index.html
@@ -87,7 +87,21 @@
                         <p>Total Price</p>
                         <p>$<span>1299</span></p>
                     </div>
+                    <hr class="m-0">
+
+                    <!-- promo code area -->
+                    <div class="mt-3">
+                        <h6>Add Pomo code</h6>
+                        <div class="d-flex">
+                            <input class="form-control" type="text">
+                            <button class="btn btn-danger">
+                                Apply
+                            </button>
+                        </div>
+                    </div>
+
                 </div>
+                <!-- pricing area -->
 
 
             </div>
