--- a/index.html
+++ b/index.html
@@ -102,14 +102,18 @@
 
                 </div>
                 <!-- pricing area -->
-
-
             </div>
-
-
 
         </section>
     </main>
+
+    <!-- Total area footer -->
+    <footer class="container mt-3 text-center ">
+        <hr>
+        <h1>Total $<span>1299</span></h1>
+    </footer>
+    <!-- Total area footer -->
+
 
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
