--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="mt-4">
                     <h6>Memory</h6>
                     <div class="d-flex">
-                        <button class="btn btn-outline-dark">8GB unified memory</button>
-                        <button class="ms-2 btn btn-outline-dark">16GB unified memory</button>
+                        <button id="memory-8gb-option" class="btn btn-outline-dark">8GB unified memory</button>
+                        <button id="memory-16gb-option" class="ms-2 btn btn-outline-dark">16GB unified memory</button>
                     </div>
                 </div>
                 <!-- memory area end -->
@@ -40,9 +40,9 @@
                 <div class="mt-3">
                     <h6>Storage</h6>
                     <div class="d-flex">
-                        <button class="btn btn-outline-dark">256GB SSD storage</button>
-                        <button class="ms-2 btn btn-outline-dark">512GB SSD storage</button>
-                        <button class="ms-2 btn btn-outline-dark">1TB SSD storage</button>
+                        <button id="storage-option-256gb" class="btn btn-outline-dark">256GB SSD storage</button>
+                        <button id="storage-option-512gb" class="ms-2 btn btn-outline-dark">512GB SSD storage</button>
+                        <button id="storage-option-1tb" class="ms-2 btn btn-outline-dark">1TB SSD storage</button>
                     </div>
                 </div>
                 <!-- storage area end -->
@@ -67,13 +67,13 @@
 
                     <div class="d-flex justify-content-between">
                         <p>Extra Memory Cost</p>
-                        <p>$<span>0</span></p>
+                        <p>$<span id="extra-memory-price">0</span></p>
                     </div>
                     <hr class="m-0">
 
                     <div class="d-flex justify-content-between">
                         <p>Extra Storage Cost</p>
-                        <p>$<span>0</span></p>
+                        <p>$<span id="extra-storage-price">0</span></p>
                     </div>
                     <hr class="m-0">
 
