--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
                 <div class="mt-3">
                     <h6>Choose your delivery option</h6>
                     <div class="d-flex">
-                        <button class="btn btn-outline-dark">Friday, Aug 25 FREE Prime Delivery</button>
-                        <button class="ms-2 btn btn-outline-dark">Friday, Aug 21 Delivery change $20</button>
+                        <button id="delivery-free-option" class="btn btn-outline-dark">Friday, Aug 25 FREE Prime
+                            Delivery</button>
+                        <button id="delivery-paid-option" class="ms-2 btn btn-outline-dark">Friday, Aug 21 Delivery
+                            change $20</button>
                     </div>
                 </div>
                 <!-- delivery option end -->
@@ -79,7 +81,7 @@
 
                     <div class="d-flex justify-content-between">
                         <p>Delivery Charge</p>
-                        <p>$<span>0</span></p>
+                        <p>$<span id="delivery-charge-price">0</span></p>
                     </div>
                     <hr class="pt-1 m-0">
 
