adding total price calculate

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="w-50 mt-5 fw-bold">
                     <div class="d-flex justify-content-between">
                         <p>best Price</p>
-                        <p>$<span>1299</span></p>
+                        <p>$<span id="item-price">1299</span></p>
                     </div>
                     <hr class="m-0">
 
@@ -87,7 +87,7 @@
 
                     <div class="d-flex justify-content-between">
                         <p>Total Price</p>
-                        <p>$<span>1299</span></p>
+                        <p>$<span id="total-price">1299</span></p>
                     </div>
                     <hr class="m-0">
 
