--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="mt-3">
                         <h6>Add Pomo code</h6>
                         <div class="d-flex">
-                            <input class="form-control" type="text">
-                            <button class="btn btn-danger">
+                            <input class="form-control" type="text" id="pomo-code-box">
+                            <button class="btn btn-danger" id="pomo-code-apply-button">
                                 Apply
                             </button>
                         </div>
@@ -112,7 +112,7 @@
     <!-- Total area footer -->
     <footer class="container mt-3 text-center ">
         <hr>
-        <h1>Total $<span>1299</span></h1>
+        <h1>Total $<span id="discount-price">1299</span></h1>
     </footer>
     <!-- Total area footer -->
 
