adding comment to html

--- a/index.html
+++ b/index.html
@@ -61,30 +61,35 @@
 
                 <!-- pricing area -->
                 <div class="w-50 mt-5 fw-bold">
+                    <!-- total price  -->
                     <div class="d-flex justify-content-between">
                         <p>best Price</p>
                         <p>$<span id="item-price">1299</span></p>
                     </div>
                     <hr class="m-0">
 
+                    <!-- Memory price  -->
                     <div class="d-flex justify-content-between">
                         <p>Extra Memory Cost</p>
                         <p>$<span id="extra-memory-price">0</span></p>
                     </div>
                     <hr class="m-0">
 
+                    <!-- Storage price  -->
                     <div class="d-flex justify-content-between">
                         <p>Extra Storage Cost</p>
                         <p>$<span id="extra-storage-price">0</span></p>
                     </div>
                     <hr class="m-0">
 
+                    <!-- Delivery Charge  -->
                     <div class="d-flex justify-content-between">
                         <p>Delivery Charge</p>
                         <p>$<span id="delivery-charge-price">0</span></p>
                     </div>
                     <hr class="pt-1 m-0">
 
+                    <!-- Total Price  -->
                     <div class="d-flex justify-content-between">
                         <p>Total Price</p>
                         <p>$<span id="total-price">1299</span></p>
