--- a/index.html
+++ b/index.html
@@ -110,16 +110,15 @@
                 </div>
                 <!-- pricing area -->
             </div>
+            <!-- total discount price -->
+            <div class="mt-3 text-center">
+                <hr>
+                <h1>Total $<span id="discount-price">1299</span></h1>
+            </div>
 
         </section>
     </main>
 
-    <!-- Total area footer -->
-    <footer class="container mt-3 text-center ">
-        <hr>
-        <h1>Total $<span id="discount-price">1299</span></h1>
-    </footer>
-    <!-- Total area footer -->
 
 
     <!-- bootstrap script -->
