adding total to footer

--- a/index.html
+++ b/index.html
@@ -108,16 +108,17 @@
                     </div>
 
                 </div>
-                <!-- pricing area -->
-            </div>
-            <!-- total discount price -->
-            <div class="mt-3 text-center">
-                <hr>
-                <h1>Total $<span id="discount-price">1299</span></h1>
+                <!-- pricing area end -->
             </div>
 
         </section>
     </main>
+
+    <!-- total discount price -->
+    <footer class="mt-3 text-center">
+        <hr>
+        <h1>Total $<span id="discount-price">1299</span></h1>
+    </footer>
 
 
 
